--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,9 @@ dependencies = [
     "python-dateutil (>=2.9.0.post0,<3.0.0)",
     "langchain-upstage (>=0.6.0,<0.7.0)",
     "langchain-google-genai (>=2.1.5,<3.0.0)",
-    "langchain-groq (>=0.3.2,<0.4.0)"
+    "langchain-groq (>=0.3.2,<0.4.0)",
+    "langchain-community (>=0.3.25,<0.4.0)",
+    "faiss-cpu (>=1.11.0,<2.0.0)"
 ]
 
 
