--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,10 @@ dependencies = [
     "langchain-google-genai (>=2.1.5,<3.0.0)",
     "langchain-groq (>=0.3.2,<0.4.0)",
     "langchain-community (>=0.3.25,<0.4.0)",
-    "faiss-cpu (>=1.11.0,<2.0.0)"
+    "faiss-cpu (>=1.11.0,<2.0.0)",
+    "bs4 (>=0.0.2,<0.0.3)",
+    "docx2txt (>=0.9,<0.10)",
+    "langchain-ollama (>=0.3.3,<0.4.0)"
 ]
 
 
