--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,9 @@ dependencies = [
     "langchain-huggingface (>=0.3.0,<0.4.0)",
     "langchain-experimental (>=0.3.4,<0.4.0)",
     "sentence-transformers (>=4.1.0,<5.0.0)",
+    "langchain-tavily (>=0.2.2,<0.3.0)",
+    "wikipedia (>=1.4.0,<2.0.0)",
+    "langchain-core (>=0.3.65,<0.4.0)",
 ]
 
 
