--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,9 @@ dependencies = [
     "langchain-tavily (>=0.2.2,<0.3.0)",
     "wikipedia (>=1.4.0,<2.0.0)",
     "langchain-core (>=0.3.65,<0.4.0)",
+    "matplotlib (>=3.10.3,<4.0.0)",
+    "seaborn (>=0.13.2,<0.14.0)",
+    "tabulate (>=0.9.0,<0.10.0)",
 ]
 
 
